--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
 p {
   font-family: 'Zeyada';
   font-size: 50px;
-  color: rgb(0,0,100);
+  color: red; 
   opacity: 0.75;
   user-select: none;
 }
